--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,8 @@
 
 body {
   background-color: rgb(239, 35, 60);
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   width: 50%;
 }
@@ -16,15 +18,14 @@ main {
 }
 
 header {
-  align-items: center;
   background-color: white;
-  display: flex;
-  font-size: 1.5em;
-  justify-content: center;
   margin-top: 40px;
   padding: 30px 0;
   text-align: center;
-  width: 100%;
+}
+
+#title {
+  font-weight: 1000;
 }
 
 #game-info1 {
