--- a/src/style.css
+++ b/src/style.css
@@ -7,14 +7,15 @@
 
 body {
   background-color: rgb(239, 35, 60);
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+  margin: auto;
   width: 50%;
 }
 
 main {
+  align-items: center;
   background-color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -28,29 +29,33 @@ header {
   font-weight: 1000;
 }
 
-#game-info1 {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  font-size: 1.5em;
-  justify-content: center;
-  margin-bottom: 50px;
+#game-instructions {
+  background-color: rgba(128, 128, 128, 0.123);
+  font-size: 1.3em;
+  margin-bottom: 15px;
+  padding: 25px;
   text-align: center;
-  width: 100%;
 }
 
-.rgb {
-  font-size: 1.2em;
-  font-weight: 250;
+#game-instructions p:nth-of-type(1) {
+  margin-bottom: 7.5px;
+}
+
+#game-instructions p:nth-of-type(2) {
+  margin: 0;
+}
+
+#rgb-color {
+  font-weight: 1000;
 }
 
 #score {
   background-color: rgb(43, 45, 66);
-  border-radius: 10px;
   color: rgb(237, 242, 244);
-  font-weight: 600;
-  margin-top: 15px;
-  padding: 10px;
+  font-size: 1.3em;
+  font-weight: 1000;
+  padding: 10px 15px;
+  text-align: center;
 }
 
 #display-balls {
